--- a/manifest.json
+++ b/manifest.json
@@ -7,20 +7,7 @@
   "background_color": "#0f0f23",
   "theme_color": "#0f0f23",
   "orientation": "portrait",
-  "icons": [
-    {
-      "src": "icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
-    }
-  ],
+  "icons": [],
   "categories": ["health", "fitness", "lifestyle"],
   "screenshots": [],
   "shortcuts": [
@@ -29,7 +16,7 @@
       "short_name": "Registrar",
       "description": "Adicionar novo registro de peso",
       "url": "/?section=registro",
-      "icons": [{ "src": "icon-192.png", "sizes": "192x192" }]
+      "icons": []
     }
   ]
 }
