--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,41 @@
 {
   "name": "FitTrack Pro",
   "short_name": "FitTrack",
-  "description": "Acompanhamento de Peso e Progresso",
-  "start_url": "./",
-  "scope": "./",
+  "description": "Acompanhamento de peso, medidas corporais e treinos personalizados",
+  "start_url": "/",
   "display": "standalone",
-  "background_color": "#0f0f23",
-  "theme_color": "#0f0f23",
-  "orientation": "portrait",
-  "icons": [],
+  "background_color": "#0a0e27",
+  "theme_color": "#6366f1",
+  "orientation": "portrait-primary",
+  "icons": [
+    {
+      "src": "icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable"
+    }
+  ],
   "categories": ["health", "fitness", "lifestyle"],
   "screenshots": [],
   "shortcuts": [
     {
       "name": "Novo Registro",
-      "short_name": "Registrar",
+      "short_name": "Registro",
       "description": "Adicionar novo registro de peso",
-      "url": "./?section=registro",
+      "url": "/#registro",
+      "icons": []
+    },
+    {
+      "name": "Treino do Dia",
+      "short_name": "Treino",
+      "description": "Ver treino do dia",
+      "url": "/#treinos",
       "icons": []
     }
   ]
